edit resume format and add additional sections

--- a/resume.hbs
+++ b/resume.hbs
@@ -16,10 +16,12 @@
 
     <div id="resume">
         {{> basics }}
-        {{> skills }}
-        {{> work }}
-        {{> volunteer }}
         {{> education }}
+        {{> work }}
+        {{> projects }}
+        {{> volunteer }}
+        {{> skills }}
         {{> awards }}
+        {{> certificates }}
     </body>
 </html>
