remove text wrapping for basics vertical seperator

--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ a {
 .vertical-separator {
     text-align: center;
     padding: 0 10px;
+    white-space: nowrap;
+    overflow-wrap: normal;
+    word-wrap: normal;
+    word-break: normal;
 }
 
 .vertical-separator:not(:first-child) {
