--- a/views/basics.hbs
+++ b/views/basics.hbs
@@ -14,6 +14,11 @@
         {{#if website~}}
         <span class="vertical-separator">{{wrapURL website}}</span>
         {{~/if}}
+        {{#each profiles}}
+        <span class="vertical-separator">
+            <a href="{{url}}" target="_blank">{{network}}</a>
+        </span>
+        {{/each}}
     </div>
     {{#if summary}}
     <div class="summary">
